fix : Overlay videoplayer cropped when video miss.
fix #96

--- a/atui/MediasPlayer/video-main.css
+++ b/atui/MediasPlayer/video-main.css
@@ -9,6 +9,7 @@
 
 #atuiMediasplayer_VideoplayerVideo /* Video */ {
     width: 100%;
+    height: 200px;
 }
 
 #atuiMediasplayer_VideoplayerDashboard /* Dashboard */ {
